--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,81 @@
   box-sizing: border-box;
 }
 
-body {
+
+/* INDEX PAGE */
+
+#index {
   background-image: url('../img/wallpaper.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
+  height: 79.4vh;
 }
 
-.container {
+#consentForm {
+  width: 58%;
+  height: fit-content;
+  padding: 0px;
+  background-color: #e3e3e4;
+  position: absolute;
+  margin-top:-200px;
+  margin-left: 50%;
+  transform: translate(-50%);
+  opacity: 0.95;
+}
+
+#consentForm textarea {
+  border: none;
+  resize: none;
+}
+
+#scrollable-textbox {
+  height: 808px;
+  width: 100%;
+  font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
+  font-size: 100%;
+  overflow-y: scroll;
+}
+
+#consentForm h1 {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+#consentForm button {
+  margin-top: 30px;
+  margin-bottom: 18.4px;
+  padding: 10px;
+  font-size: 16px;
+  margin-left: 260px;
+}
+
+#consentForm button:hover {
+  background-color: white;
+}
+
+#popup-text {
+  display: none;
+}
+
+#popup-text {
+  width: 420px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 6px 0;
+  z-index: 1;
+  float: right;
+  margin-top: -93px;
+  margin-right: 140px;
+}
+
+.content {
   margin-left: auto;
   margin-right: auto;
   margin-top: 200px;
-  width: 42%;
+  width: 40%;
   padding: 10px;
   border-radius: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -26,14 +91,14 @@ body {
 }
 
 .header h1 {
-  padding-top: 42px;
-  font-size: 2.9vw;
+  padding-top: 20px;
+  font-size: 2.8vw;
   background-color: #fff;
 }
 
 .header img {
-  width: 140px;
-  height: 140px;
+  max-width: 160px;
+  max-height: 140px;
   float: left;
 }
 
@@ -49,25 +114,37 @@ body {
   background-color: #fff;
 }
 
-.column h2,
-h3 {
+.column h2,h3 {
   font-size: 1.7vw;
   background-color: #fff;
 }
 
+.bold {
+  font-weight: bold;
+  color: #fff;
+  background-color: #67696a;
+}
+
 .column button {
-  background-color: #0945d0;
-  border: 0;
+  background-color: #9a9aa7;
+  border: none;
   margin-top: 30px;
   color: #fff;
-  opacity: 0.6;
   padding: 10px 15px;
   border-radius: 100px;
+  box-shadow: 0px 0px 2px 2px rgb(151, 145, 145);
   font-size: 17px;
-  letter-spacing: 0.8px;
+  letter-spacing: 0.5px;
   z-index: 999;
-  width: 150px;
+  min-height: 20px;
+  min-width: 100px;
   cursor: pointer;
+  transition-duration: 0.6s;
+}
+
+.column button:hover {
+  background: linear-gradient(245deg, rgb(69, 156, 210) 50%, rgba(255, 87, 51, 1) 50% 100%);
+  box-shadow: none;
 }
 
 .column img {
@@ -75,34 +152,1057 @@ h3 {
   height: 100%;
 }
 
-.links {
-  font-size: 25px;
-  padding-left: 40px;
+
+/* INTRO PAGE */
+
+#intro {
+  background-color: #e3e3e8;
+}
+
+table {
+  width: 100%;
+}
+
+.main-content {
+  width: 950px;
+  margin: 0 auto;
+}
+
+.main-content td {
+  border-radius: 20px;
+}
+
+.orange {
+  background-color: #cf644d;
+  color: white;
+}
+
+.blue {
+  background-color: #64A2C8;
+  color: white;
+}
+
+table img {
+  width: 100%;
+  height: 300px;
+  border-radius: 20px;
+  border-color:#9a9aa4;
+  border-style: solid;
+}
+
+table h2 {
+  text-align: center;
+  margin: 0.5em;
+}
+
+.features td {
+  width: 49%;
+  margin: 3px;
+  padding: 20px;
+  height: 250px;
   float: left;
+}
+
+.features p {
+  margin-left: 1em;
+  font-size: 18px;
+  line-height: 23px;
+}
+
+.features li {
+  margin-left: 2.2em;
+  font-size: 17.9px;
+}
+
+#next {
+  text-align: center;
+}
+
+#next button {
+  background-color: #e3e3e8;
+  border: none;
+  margin: 20px;
+  padding: 10px 15px;
+  border-radius: 100px;
+  box-shadow: 0px 0px 2px 2px #9a9aa4;
+  font-size: 17px;
+  letter-spacing: 0.5px;
+  z-index: 999;
+  min-height: 20px;
+  min-width: 300px;
+  cursor: pointer;
+  transition-duration: 0.6s;
+}
+
+#next button:hover {
+  background-color: #c5c4c7;
+}
+
+/* Footer */
+.footer {
+  text-align: center;
+  margin: auto;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.links {
+  font-size: 20px;
+  word-spacing: 10px;
+}
+
+.links a {
+  text-decoration: none;
+}
+
+/* SIGNUP PAGE */
+
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+
+:root {
+  --error-color: #dc3545;
+  --success-color: #28a745;
+  --warning-color: #0602dd;
+}
+
+#register {
+  background-color: #fff;
+  background-size: 100% 2.9em;
+  background-image: -webkit-linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), -webkit-linear-gradient(#eee .05em, transparent .05em);
+  background-image: -moz-linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), -moz-linear-gradient(#eee .05em, transparent .05em);
+  background-image: -ms-linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), -ms-linear-gradient(#eee .05em, transparent .05em);
+  background-image: -o-linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), -o-linear-gradient(#eee .05em, transparent .05em);
+  background-image: linear-gradient(0deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px), linear-gradient(#eee .05em, transparent .05em);
+  height: fit-content;
+}
+
+#signup {
+  font-family: Raleway;
+  font-size: 20px;
+  background-color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.18);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.7px);
+  -webkit-backdrop-filter: blur(3.7px);
+}
+
+.container {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  width: 600px;
+  height: fit-content;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Form */
+.form {
+  padding: 10px 20px;
+}
+
+.form img {
+  width: 600px;
+  height: 230px;
+  margin-left: -20px;
+  margin-top: -10px;
+}
+
+.form p {
+  font-size: medium;
+  padding-bottom: 15px;
+}
+
+.form-field {
+  margin-bottom: 15px;
+}
+
+.form-field label {
+  display: block;
+  color: #777;
+  margin-bottom: 5px;
+}
+
+.form-field input {
+  border: solid 2px #f0f0f0;
+  border-radius: 3px;
+  padding: 10px;
+  margin-bottom: 5px;
+  font-size: 16px;
+  display: block;
+  width: 100%;
+}
+
+.form-field input:focus {
+  outline: none;
+}
+
+/* Color the borders of the boxes with errors */
+.form-field.error input {
+  border-color: var(--error-color);
+  /*red*/
+}
+
+/* Color the borders of the boxes with no errors */
+.form-field.success input {
+  border-color: var(--success-color);
+  /*green*/
+}
+
+/* Error messages */
+.form-field small {
+  color: var(--warning-color);
+  /*blue*/
+}
+
+.form-field #password-strength-text {
+  font-size: medium;
+  text-transform: uppercase;
+  word-spacing: 10px;
+  color: #3b6c8e;
+}
+
+/* Form button */
+.form-field #button {
+  width: 100%;
+  background: #3b6c8e;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+}
+
+.form-field #button:hover {
+  background: #0069d9;
+  cursor: pointer;
+}
+
+.form-field #button:focus {
+  outline: none;
+}
+
+/* Info links */
+.form-field .links {
+  padding-top: 20px;
+  text-transform: uppercase;
   word-spacing: 20px;
+  text-align: center;
 }
 
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+/* MESSAGE PAGE */
+
+#message {
+  background-color: #FFDEE9;
+  background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+  height: 9.7vh;
+}
+
+#message .content {
+  margin-top: 100px;
+  width: 40%;
+}
+
+#message .banner {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+#message .banner img {
+  width: 100%;
+  height: 250px;
+}
+
+.main {
+  padding: 10px;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.main #feedback {
+  font-size: 18px; 
+  font-style: oblique; 
+  margin-top: 5px; 
+  margin-bottom: 5px; 
+  margin-left: 30px;
+}
+
+.main #survey {
+  text-align: center;
+  font-size: xx-large;
+  margin-top: 15px;
+}
+
+.main #survey a {
+  text-decoration: none; 
+  color: #216996; 
+}
+
+
+/*MEDIA QUERIES*/
+
+/* Extra small devices (phones) */
+@media only screen and (max-width: 480px) {
+
+  #consentForm {
+    margin-top:-100px;
+    width: 100%;
+  }
+
+  #scrollable-textbox {
+    height:467px;
+  }
+
+  #consentForm h1 {
+    margin-top: 5px;
+    font-size: 18px;
+    margin-bottom: 4px;
+  }
+
+  #consentForm textarea {
+    font-size: 16px;
+  }
+
+  #consentForm button {
+    margin-left: 40px;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #popup-text {
+    width: 320px;
+    margin-right: 30px;
+    margin-top: -78px;
+    font-size: 13px;
+  }
+
+  .content {
+    margin-top: 100px;
+    width: 95%;
+  }
+
+  .header h1 {
+    padding-top: 17px;
+    font-size: 20px;
+  }
+
+  .header img {
+    width: 90px;
+    height: 60px;
+    padding-left: -20px;
+  }
+
+  .row {
+    display: block;
+  }
+
+  .column h2,h3 {
+    font-size: 16px;
+  }
+
+  .column button {
+    padding: 3px 6px;
+    border-radius: 70px;
+    font-size: 10px;
+    min-height: 15px;
+  }
+
+  .main-content {
+    width: 100%;
+  }
+
+  table img {
+    height: 100px;
+    width: 98.5%;
+  }
+
+  .features td {
+    width: 98%;
+    height: 220px;
+    padding: 5px;
+  }
+
+  .features p {
+    margin-left: 0.2em;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .features li {
+    margin-left: 1.2em;
+    font-size: 16px;
+  }
+
+  #next button {
+    margin: 10px;
+    font-size: 13px;
+  }
+
+  .footer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .links {
+    font-size: 16px;
+    word-spacing: 10px;
+  }
+
+  #signup {
+    font-size: 16px;
+  }
+
+  .container {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: 100%;
+  }  
+
+  .form {
+    padding: 5px 10px;
+  }
+
+  .form img {
+    height: 140px;
+    width: 105.5%;
+    margin-left: -10px;
+    margin-top: -5px;
+  }
+
+  .form p {
+    font-size: 16px;
+    padding-bottom: 7px;
+  }
+
+  .form-field {
+    margin-bottom: 7px;
+  }
+
+  .form-field .links {
+    padding-top: 5px;
+    word-spacing: 10px;
+  }
+
+  #message .content {
+    margin-top: 10px;
+    width: 100%;
+  }
+
+  #message .banner img {
+    width: 100%;
+    height: 140px;
+  }
+ 
+  .main {
+    padding: 6px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .main h1 {
+    font-size: 20px;
+  }
+
+  .main #feedback {
+    font-size: 16px;
+  }
+
+  .main a {
+    font-size: 20px;
+  }
+
+}
+
+/* Small devices (portrait tablets and large phones) */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  
+  #consentForm {
+    margin-top:-100px;
+    width: 100%;
+  }
+
+  #scrollable-textbox {
+    height:367px;
+  }
+
+  #consentForm h1 {
+    margin-top: 5px;
+    font-size: 18px;
+    margin-bottom: 4px;
+  }
+
+  #consentForm textarea {
+    font-size: 16px;
+  }
+
+  #consentForm button {
+    margin-left: 80px;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #popup-text {
+    width: 320px;
+    margin-right: 30px;
+    margin-top: -78px;
+    font-size: 13px;
+  }
+
+  .content {
+    margin-top: 100px;
+    width: 85%;
+  }
+
+  .header h1 {
+    padding-left: 15px;
+    padding-top: 17px;
+    font-size: 23px;
+  }
+
+  .header img {
+    width: 90px;
+    height: 60px;
+    padding-left: -20px;
+  }
+
+  .column h2,h3 {
+    font-size: 16px;
+  }
+
+  .column button {
+    margin-top: 10px;
+    padding: 3px 6px;
+    border-radius: 70px;
+    font-size: 10px;
+    min-height: 15px;
+  }
+
+  .main-content {
+    width: 100%;
+  }
+
+  table img {
+    height: 100px;
+  }
+
+  .features td {
+    width: 99.5%;
+    height: 180px;
+    padding: 5px;
+  }
+
+  .features p {
+    margin-left: 0.2em;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .features li {
+    margin-left: 1.2em;
+    font-size: 16px;
+  }
+
+  #next button {
+    margin: 10px;
+    font-size: 13px;
+  }
+
+  .footer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .links {
+    font-size: 16px;
+    word-spacing: 5px;
+  }
+
+  #signup {
+    font-size: 16px;
+  }
+
+  .container {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: 450px;
+  }  
+
+  .form {
+    padding: 5px 10px;
+  }
+
+  .form img {
+    height: 140px;
+    width: 450px;
+    margin-left: -10px;
+    margin-top: -5px;
+  }
+
+  .form p {
+    font-size: 16px;
+    padding-bottom: 7px;
+  }
+
+  .form-field {
+    margin-bottom: 7px;
+  }
+
+  .form-field .links {
+    padding-top: 5px;
+    word-spacing: 5px;
+  }
+
+  #message .content {
+    margin-top: 20px;
+    width: 90%;
+  }
+
+  #message .banner img {
+    width: 100%;
+    height: 140px;
+  }
+ 
+  .main {
+    padding: 6px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .main h1 {
+    font-size: 20px;
+  }
+
+  .main #feedback {
+    font-size: 16px;
+  }
+
+  .main a {
+    font-size: 20px;
+  }
+}
+
+/* Medium devices (landscape tablets and laptops) */
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  
+  #consentForm {
+    margin-top:-100px;
+    width: 100%;
+  }
+
+  #scrollable-textbox {
+    height:367px;
+  }
+
+  #consentForm h1 {
+    margin-top: 5px;
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+
+  #consentForm textarea {
+    font-size: 16px;
+  }
+
+  #consentForm button {
+    margin-left: 150px;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #popup-text {
+    width: 320px;
+    margin-right: 100px;
+    margin-top: -78px;
+    font-size: 13px;
+  }
+
+  .content {
+    margin-top: 100px;
+    width: 55%;
+  }
+
+  .header h1 {
+    padding-top: 30px;
+    padding-left: 20px;
+  }
+
+  .header img {
+    width: 120px;
+    height: 80px;
+  }
+
+  .column button {
+    margin-top: 10px;
+    padding: 3px 6px;
+    border-radius: 70px;
+    font-size: 12px;
+    min-height: 15px;
+  }
+
+  .main-content {
+    width: 100%;
+  }
+
+  table img {
+    height: 130px;
+  }
+
+  .features td {
+    height: 210px;
+  }
+
+  .features p {
+    margin-left: 0.2em;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .features li {
+    margin-left: 1.2em;
+    font-size: 16px;
+  }
+
+  #next button {
+    margin: 10px;
+    font-size: 13px;
+  }
+
+  .footer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .links {
+    font-size: 16px;
+    word-spacing: 5px;
+  }
+
+  #signup {
+    font-size: 16px;
+  }
+
+  .container {
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }  
+
+  .form {
+    padding: 5px 10px;
+  }
+
+  .form img {
+    height: 180px;
+    margin-left: -10px;
+    margin-top: -5px;
+  }
+
+  .form p {
+    font-size: 16px;
+    padding-bottom: 7px;
+  }
+
+  .form-field {
+    margin-bottom: 7px;
+  }
+
+  .form-field .links {
+    padding-top: 5px;
+    word-spacing: 0px;
+  }
+
+  #message .content {
+    margin-top: 20px;
+    width: 70%;
+  }
+
+  #message .banner img {
+    width: 100%;
+    height: 180px;
+  }
+ 
+  .main {
+    padding: 6px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .main h1 {
+    font-size: 18px;
+  }
+
+  .main a {
+    font-size: 20px;
+  }
+}
+
+/* Large devices (large laptops and desktops) */
+@media only screen and (min-width: 1025px) and (max-width: 1250px) {
+
+  #consentForm {
+    margin-top:-100px;
+    width: 94%;
+  }
+
+  #consentForm h1 {
+    margin-top: 5px;
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+
+  #scrollable-textbox {
+    height:467px;
+  }
+
+  #consentForm textarea {
+    font-size: 16px;
+  }
+
+  #consentForm button {
+    margin-left: 240px;
+  }
+
+  #popup-text {
+    margin-right: 150px;
+  }
+  
+  .content {
+    margin-top: 100px;
+    width: 55%;
+  }
+
+  .header h1 {
+    padding-top: 33px;
+    padding-left: 40px;
+  }
+
+  .header img {
+    width: 140px;
+    height: 100px;
+  }
+
+  .column img {
+    height: 90%;
+  }
+
+  .column button {
+    margin-top: 20px;
+    padding: 8px 12px;
+    border-radius: 80px;
+    min-height: 17px;
+  }
+
+  table img {
+    height: 130px;
+  }
+
+  .features td {
+    padding: 15px;
+    height: 200px;
+  }
+
+  .features p {
+    margin-left: 5px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .features li {
+    margin-left: 2.2em;
+    font-size: 16px;
+  }
+  
+  #next button {
+    margin: 10px;
+    font-size: 16px;
+  }
+
+  .footer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .links {
+    font-size: 16px;
+    word-spacing: 5px;
+  }
+
+  #signup {
+    font-size: 18px;
+  }
+
+  .container {
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }  
+
+  .form {
+    padding: 5px 10px;
+  }
+
+  .form img {
+    height: 210px;
+    margin-left: -10px;
+    margin-top: -5px;
+  }
+
+  .form p {
+    font-size: 16px;
+    padding-bottom: 7px;
+  }
+
+  .form-field {
+    margin-bottom: 7px;
+  }
+
+  .form-field .links {
+    padding-top: 5px;
+    word-spacing: 0px;
+  }
+
+  #message .content {
+    margin-top: 20px;
+    width: 60%;
+  }
+
+  #message .banner img {
+    width: 100%;
+    height: 200px;
+  }
+ 
+  .main {
+    padding: 6px;
+    font-size: 16px;
+    line-height: 24px;
+  }
   
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
+/* Extra large devices (large screens) */
+@media only screen and (min-width: 1251px) and (max-width: 1800px) {
   
-}
+  #consentForm {
+    margin-top:-100px;
+    width: 86%;
+  }
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  
-}
+  #scrollable-textbox {
+    height:467px;
+  }
 
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  
-}
+  #consentForm h1 {
+    margin-top: 5px;
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+  #consentForm button {
+    margin-left: 300px;
+    margin-bottom: 15.4px;
+  }
+
+  #popup-text {
+    margin-right: 50px;
+  }
+
+  .content {
+    margin-top: 100px;
+  }
+
+  .header h1 {
+    padding-top: 37px;
+    font-size: 2.4vw;
+  }
   
+  .header img {
+    width: 140px;
+    height: 110px;
+  }
+
+  table img {
+    height: 130px;
+  }
+
+  .features td {
+    padding: 5px;
+    height: 170px;
+  }
+
+  .features p {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .features li {
+    margin-left: 2.2em;
+    font-size: 16px;
+  }
+
+  #next button {
+    margin: 10px;
+    font-size: 16px;
+  }
+
+  .footer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .links {
+    font-size: 16px;
+    word-spacing: 5px;
+  }
+
+  #signup {
+    font-size: 18px;
+  }
+
+  .container {
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }  
+
+  .form {
+    padding: 5px 10px;
+  }
+
+  .form img {
+    height: 210px;
+    margin-left: -10px;
+    margin-top: -5px;
+  }
+
+  .form p {
+    font-size: 16px;
+    padding-bottom: 7px;
+  }
+
+  .form-field {
+    margin-bottom: 7px;
+  }
+
+  .form-field .links {
+    padding-top: 5px;
+  }
+
+  #message .content {
+    margin-top: 20px;
+    width: 60%;
+  }
+
+  #message .banner img {
+    width: 100%;
+    height: 200px;
+  }
+ 
+  .main {
+    padding: 6px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
 }
